--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "magic": "webpack"
+    "build": "webpack --mode=production",
+    "watch": "webpack --watch --mode=development",
+    "serve": "nodemon server.js",
+    "start": "npm-run-all --print-label --parallel watch serve",
+    "format": "prettier --write \"./src/**/*.ts\" \"./src/**/*.tsx\"",
+    "format-check": "prettier --check \"./src/**/*.ts\" \"./src/**/*.tsx\""
   },
   "author": "Samuel Ogundipe",
   "license": "ISC",
@@ -17,5 +22,12 @@
     "ts-loader": "^9.2.3",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
+  },
+  "devDependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   }
 }
